1. show infoblock in content list (backoffice) 2. delete infoblock: no "i'm really sure" label, correct button name ("Delete"), readable header 3. buttons in backoffice lists 4. increased max length of entity html output to skip parsing (1000 -> 10000) 5. urldecode in routing to support cyrrilic urls 6. "import dir" for less compiler set equal to current less file dir 7. correct format for suit props (like "default_wrapper:my.super.module:wrapper;")

--- a/Admin/style/main.less
+++ b/Admin/style/main.less
@@ -745,20 +745,20 @@ font-family:Arial;
 }
 
 .fx_list_buttons {
-    display:none;
+    visibility:hidden;
 }
 
 .fx_list_row:hover {
     background:#F9F9F9;
     border-bottom:1px solid #ddd;
     .fx_list_buttons {
-        display:block;
+        visibility:visible;
         opacity:0.6;
     }
 }
 
 .fx_admin_selected .fx_list_buttons {
-    display:block;
+    visibility:visible;
     opacity:1 !important;
 }
 
@@ -842,7 +842,7 @@ font-family:Arial;
 }
 
 .fx_list_cell_last {
-    width: 50%;
+    //width: 50%;
 }
 
 span.fx_admin_current {
